Working on First iterations and image library

--- a/Tanked!/index.html
+++ b/Tanked!/index.html
@@ -12,7 +12,27 @@
   </head>
   <body>
     <div class="container"></div>
+    <script src="bullet.js"></script>
     <script src="tank.js"></script>
     <script src="app.js"></script>
+    <div class="pintado-Ejemplo">
+      <h1> TANKED!</h1>
+      <div id="map">
+          <div id="player1"></div>
+          <div id="player2"></div>
+          <div id="bullet1"></div>
+          <div id="bullet2"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+          <div class="wall"></div>
+
+      </div>
+
+    </div>
   </body>
   </html>
