--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tanked</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>TANKED!</title>
   </head>
   <body>
     <div class="container"></div>
-    <script src="bullet.js"></script>
-    <script src="tank.js"></script>
-    <script src="app.js"></script>
+    <script src="js/bullet.js"></script>
+    <script src="js/tank.js"></script>
+    <script src="js/app.js"></script>
     <div class="pintado-Ejemplo">
       <h1> TANKED!</h1>
       <div id="map">
