--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
   </head>
   <body>
     <h1> TANKED!</h1>
+    <div class="playerLeft">
+        PLAYER 1
+        <br>
+        LIVES: XXX
+        <br>
+        POINTS: O
+      <img src="img/Tank1.gif" alt="">
+    </div>
+
     <div class="container"></div>
     <script src="js/bullet.js"></script>
     <script src="js/tank.js"></script>
     <script src="js/app.js"></script>
+    <div class="playerRight">
+      PLAYER 2
+      <br>
+      LIVES: XXX
+      <br>
+      POINTS: O
+        <img src="img/Tank2.gif" alt="">
+    </div>
+    <button type="button" name="button">START</button>
   </body>
   </html>
