FIre in the HOLE

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <br>
         POINTS: O
       <img src="img/Tank1.gif" alt="">
+      <br>
+        <br>
+      Controls: UP/DOWN/LEFT/RIGHT
+      <br>
+      Fire:SPACEBAR
     </div>
 
     <div class="container"></div>
@@ -31,7 +36,11 @@
       LIVES: XXX
       <br>
       POINTS: O
-        <img src="img/Tank2.gif" alt="">
+      <img src="img/Tank2.gif" alt="">
+      <br>
+      Controls: W/S/A/D
+      <br>
+      Fire:CTRL
     </div>
     <button type="button" name="button">START</button>
   </body>
