--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img id="tLeft" src="img/Tank1.gif" alt="">
     <img id="tRight"src="img/Tank2.gif" alt="">
     <button class="btn" type="button" name="button"><a href="#">RESTART</a></button>
-    <button class="btn" type="button" name="button">HELP!</button>
-    <button class="btn" type="button" name="button">OPTIONS</button>
+  <!--  <button class="btn" type="button" name="button">HELP!</button>
+    <button class="btn" type="button" name="button">OPTIONS</button>-->
   </body>
   </html>
