two players for real

--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
     <div class="board">
       <div class="container"></div>
     </div>
-    <script src="js/bullet.js"></script>
-    <script src="js/tank.js"></script>
-    <script src="js/app.js"></script>
     <div class="playerRight">
       <p>
         <h4>PLAYER 2</h4>
-        <h4>LIVES:<h4id="lifes2">XXX</h4></h4>
-        <h4>POINTS: <h4 id=points2>0</h4></h4>
+        <h4>LIVES:<h4 id="lifes2">XXX</h4></h4>
+        <h4>POINTS: <h4 id="points2">0</h4></h4>
         <h4>Controls:</h4><h4>W/S/A/D</h4>
         <h4>Fire:CTRL</h4>
       </p>
@@ -45,5 +42,8 @@
     <button class="btn" type="button" name="button"><a href="#">RESTART</a></button>
   <!--  <button class="btn" type="button" name="button">HELP!</button>
     <button class="btn" type="button" name="button">OPTIONS</button>-->
+    <script src="js/bullet.js"></script>
+    <script src="js/tank.js"></script>
+    <script src="js/app.js"></script>
   </body>
   </html>
