--- a/index.html
+++ b/index.html
@@ -12,38 +12,48 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   </head>
   <header>
-        <h1 id="title"> TANKED!</h1>
+        <h1 id="title"> TANKED! </h1>
   </header>
   <body>
-
     <div class="playerLeft">
       <p>
         <h4>PLAYER 1</h4>
-        <h4>LIVES:<h4 id="lifes1">XXX</h4></h4>
-        <h4>POINTS: <h4 id="points1">0</h4></h4>
-        <h4>Controls:</h4><h4>ARROW-KEYS</h4>
+        <h4>LIVES:
+          <h4 id="lifes1">XXX</h4>
+        </h4>
+        <h4>POINTS:
+          <h4 id="points1">0</h4>
+        </h4>
+        <h4>Controls:</h4>
+        <h4>ARROW-KEYS</h4>
         <h4>Fire:SPACEBAR</h4>
     </p>
     </div>
     <div class="board">
-      <div class="container"></div><div class="player1Wins"></div>
+      <div class="container"></div><div class="playerWins"></div>
     </div>
 
     <div class="playerRight">
       <p>
         <h4>PLAYER 2</h4>
-        <h4>LIVES:<h4 id="lifes2">XXX</h4></h4>
-        <h4>POINTS: <h4 id="points2">0</h4></h4>
-        <h4>Controls:</h4><h4>W/S/A/D</h4>
+        <h4>LIVES:
+          <h4 id="lifes2">XXX</h4>
+        </h4>
+        <h4>POINTS:
+          <h4 id="points2">0
+          </h4></h4>
+        <h4>Controls:</h4>
+        <h4>W/S/A/D</h4>
         <h4>Fire:CTRL</h4>
       </p>
     </div>
     <img id="tLeft" src="img/Tank1.gif" alt="">
     <img id="tRight"src="img/Tank2.gif" alt="">
-    <button class="btn" type="button" name="button"><a href="file:///home/metalozaru/Escritorio/Practica1/IHProyect1/index.html">RESTART</a></button>
+    <button class="btn" type="button" name="button">
+      <a href="https://ahuertam.github.io/IHProyect1/index.html">RESTART</a>
+    </button>
   <!--  <button class="btn" type="button" name="button">HELP!</button>
     <button class="btn" type="button" name="button">OPTIONS</button>-->
-
     <script src="js/bullet.js"></script>
     <script src="js/bulletIA.js"></script>
     <script src="js/tank.js"></script>
